tests/NormalTests/paczka2/big_fuzzy/25051716.err
Error in line 8: tIKLJyuqJ S974 86,7
Error in line 14: tIKLJyuqJ A388 36,8
Error in line 11: QvhgOpB S899 56,8
Error in line 21: Vb2CWu S899 4,0
Error in line 22: Vb2CWu A382 3,5
Error in line 29: sedkaC4G A382 17,0
Error in line 38: tIKLJyuqJ A382 -4,3
Error in line 39: Vb2CWu S8** 22,3
Error in line 35: 8uqyEzIOHL A382 29,5
Error in line 33: tIKLJyuqJ A382 73,5
Error in line 30: onHnrZ S899 97,9
Error in line 47: Vb2CWu S899 71,1
Error in line 55: onHnrZ A388 24,8
Error in line 57: onHnrZ S974 80,4
Error in line 58: onHnrZ S899 13,5
Error in line 64: tIKLJyuqJ S974 -3,4
Error in line 49: tIKLJyuqJ S974 51,1
Error in line 62: sedkaC4G S974 99,0
Error in line 65: Vb2CWu A388 57,4
Error in line 72: 8uqyEzIOHL S899 v8,6
Error in line 93: Vb2CWu A388 77,3
Error in line 95: 8uqyEzIOHL S974 327,7
Error in line 103: onHnrZ A382 61,1
Error in line 89: A382 S899 333,2
Error in line 104: onHnrZ S974 64,0
Error in line 100: sedkaC4G S899 17,6
Error in line 119: 8uqyEzIOHL S974 96,8
Error in line 132: 8uqyEzIOHL A382 87,5
Error in line 134: onHnrZ A388 42,5
Error in line 173: tIKLJyuqJ S974 39,15
Error in line 175: QvhgOpB S974 6,2
Error in line 167: tIKLJyuqJ S899 38,2
Error in line 177: 8uqyEzIOHL A388 26,9
Error in line 188: tIKLJyuqJ S899 2,12
Error in line 198: A382 A382 39,7
Error in line 199: tIKLJyuqJ A382 50,4
Error in line 203: onHnrZ S899 11,4
Error in line 216: onHnrZ S974 16,7
Error in line 195: 8uqyEzIOHL A382 97,1
Error in line 223: tIKLJyuqJ A388 32,1
Error in line 227: 8uqyEzIOHL S899 150,02
Error in line 231: Vb2CWu A388 95,3
Error in line 225: tIKLJyuqJ A382 4,3
Error in line 219: A382 A388 4,3
Error in line 224: 8uqyEzIOHL S899 42,2
Error in line 235: tIKLJyuqJ S899 4,6
Error in line 241: 8uqyEzIOHL S974 37,8
